--- a/index.html
+++ b/index.html
@@ -8,5 +8,32 @@
     <input type="button" value="hi" onclick="alert('hi')">
     <input type="text" onchange="('changed')">
     <input type="text" onkeydown="alert('keydown')">
+    <h1>Conditional statements</h1>
+    <script>
+      document.write("1<br>");
+      document.write("2<br>");
+      document.write("3<br>");
+      document.write("4<br>");
+    </script>
+    <h2>If-true</h2>
+    <script>
+      document.write("1<br>");
+      if(true) {
+        document.write("2<br>");
+      } else {
+        document.write("3<br>");
+      }
+        document.write("4<br>"):
+    </script>
+     <h2>If-false</h2>
+    <script>
+      document.write("1<br>");
+      if(false) {
+        document.write("2<br>");
+      } else {
+        document.write("3<br>");
+      }
+        document.write("4<br>"):
+    </script>   
   </body>
 </html>
