--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       } else {
         document.write("3<br>");
       }
-        document.write("4<br>"):
+        document.write("4<br>");
     </script>
      <h2>If-false</h2>
     <script>
@@ -33,7 +33,7 @@
       } else {
         document.write("3<br>");
       }
-        document.write("4<br>"):
+        document.write("4<br>");
     </script>   
   </body>
 </html>
